--- a/index.html
+++ b/index.html
@@ -1,22 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 
- 
+
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.css">
 </head>
 
- 
+
 
 <body>
-   
-    <canvas id="speedChart" width="600" height="400"></canvas>
+    <div class="row">
+        <div class="col-lg-12">
+
+            <canvas id="otherChart" width="1800" height="400"></canvas>
+        </div>
+        <div class="col-lg-12 " style="font-size: xx-large; font-weight: bolder;">
+            Unit Price / Minute: &nbsp; <span id="vprice"></span>
+        </div>
+        <div class="col-lg-12">
+            <canvas id="priceChart" width="1800" height="400"></canvas>
+        </div>
+
+
+    </div>
+
+    </div>
+
 </body>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.bundle.min.js"></script>
 <script src="script.js"></script>
+
 </html>
